# UWB_ranging

./: .gitignore  README.md
Drivers/: CMakeLists.txt  CMakePresets.json  Changelog.md  README.md
Drivers/API/: CMakeLists.txt
Drivers/API/Build_Platforms/STM_Nucleo_F429/: .cproject  .project  EVK3000_F429_CubeMX.ioc  STM32F429ZITx_FLASH.ld  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usbd_cdc_if.c  usbd_desc.c
Drivers/API/Build_Platforms/STM_Nucleo_F429/Inc/: main.h  usbd_desc.h
Drivers/API/Build_Platforms/STM_Nucleo_F429/platform/: deca_mutex.c  deca_probe_interface.c  deca_spi.c  deca_spi.h  port.c  port.h
Drivers/API/Build_Platforms/nRF52840-DK/: CMakeLists.txt  build.py  dw3000_api.emProject  dw3000_api.emSession  flash_placement.xml
Drivers/API/Build_Platforms/nRF52840-DK/Setup/: nrf52840_linker.ld.in
Drivers/API/Build_Platforms/nRF52840-DK/Source/: main.c
Drivers/API/Build_Platforms/nRF52840-DK/Source/platform/: deca_probe_interface.c  deca_spi.c  port.c  (+2 more)
Drivers/API/Build_Platforms/nRF52840-DK/Startup/: CMakeLists.txt  thumb_crt0.s
Drivers/API/Shared/dwt_uwb_driver/: .gitmodules  deca_compat.c  deca_device_api.h  deca_interface.c  deca_interface.h  deca_private.h  deca_rsl.c  deca_rsl.h  deca_types.h  deca_version.h
Drivers/API/Shared/dwt_uwb_driver/.gitlab/: CODEOWNERS
Drivers/API/Shared/dwt_uwb_driver/dw3000/: dw3000_deca_regs.h  dw3000_deca_vals.h  dw3000_device.c
Drivers/API/Shared/dwt_uwb_driver/dw3720/: dw3720_deca_regs.h  dw3720_deca_vals.h  dw3720_device.c
Drivers/API/Shared/dwt_uwb_driver/utest/: CMakeLists.txt  run_unit_tests.sh
Drivers/API/Src/: config_options.c  config_options.h  example_selection.h
Drivers/API/Src/examples/ex_00a_reading_dev_id/: read_dev_id.c
Drivers/API/Src/examples/ex_01a_simple_tx/: simple_tx.c
Drivers/API/Src/examples/ex_01b_tx_sleep/: tx_sleep.c  tx_sleep_idleRC.c
Drivers/API/Src/examples/ex_01c_tx_sleep_auto/: tx_sleep_auto.c
Drivers/API/Src/examples/ex_01d_tx_timed_sleep/: tx_timed_sleep.c
Drivers/API/Src/examples/ex_01e_tx_with_cca/: tx_with_cca.c
Drivers/API/Src/examples/ex_01g_simple_tx_sts_sdc/: simple_tx_sts_sdc.c
Drivers/API/Src/examples/ex_01h_simple_tx_pdoa/: simple_tx_pdoa.c
Drivers/API/Src/examples/ex_01i_simple_tx_aes/: simple_tx_aes.c
Drivers/API/Src/examples/ex_01j_simple_tx_automotive/: simple_tx_automotive.c
Drivers/API/Src/examples/ex_02a_simple_rx/: simple_rx.c  simple_rx_nlos.c
Drivers/API/Src/examples/ex_02c_rx_diagnostics/: rx_diagnostics.c
Drivers/API/Src/examples/ex_02d_rx_sniff/: rx_sniff.c
Drivers/API/Src/examples/ex_02e_rx_dbl_buff/: double_buffer_rx.c
Drivers/API/Src/examples/ex_02f_rx_with_crystal_trim/: rx_with_xtal_trim.c
Drivers/API/Src/examples/ex_02g_simple_rx_sts_sdc/: simple_rx_sts_sdc.c
Drivers/API/Src/examples/ex_02h_simple_rx_pdoa/: simple_rx_pdoa.c
Drivers/API/Src/examples/ex_02i_simple_rx_aes/: simple_rx_aes.c
Drivers/API/Src/examples/ex_02j_rx_adc_capture/: rx_adc_capture.c
Drivers/API/Src/examples/ex_02k_simple_rx_cir/: simple_rx_cir.c
Drivers/API/Src/examples/ex_03a_tx_wait_resp/: tx_wait_resp.c
Drivers/API/Src/examples/ex_03b_rx_send_resp/: rx_send_resp.c
Drivers/API/Src/examples/ex_03d_tx_wait_resp_interrupts/: tx_wait_resp_int.c
Drivers/API/Src/examples/ex_04a_cont_wave/: continuous_wave.c
Drivers/API/Src/examples/ex_04b_cont_frame/: continuous_frame.c
Drivers/API/Src/examples/ex_05a_ds_twr_init/: ds_twr_initiator.c  ds_twr_initiator_sts.c
Drivers/API/Src/examples/ex_05b_ds_twr_resp/: ds_twr_responder.c  ds_twr_responder_sts.c
Drivers/API/Src/examples/ex_05c_ds_twr_init_sts_sdc/: ds_twr_sts_sdc_initiator.c
Drivers/API/Src/examples/ex_05d_ds_twr_resp_sts_sdc/: ds_twr_sts_sdc_responder.c
Drivers/API/Src/examples/ex_06a_ss_twr_initiator/: ss_twr_initiator.c  ss_twr_initiator_sts.c  ss_twr_initiator_sts_no_data.c
Drivers/API/Src/examples/ex_06b_ss_twr_responder/: ss_twr_responder.c  ss_twr_responder_sts.c  ss_twr_responder_sts_no_data.c
Drivers/API/Src/examples/ex_06e_AES_ss_twr_initiator/: ss_aes_twr_initiator.c
Drivers/API/Src/examples/ex_06f_AES_ss_twr_responder/: ss_aes_twr_responder.c
Drivers/API/Src/examples/ex_07a_ack_data_tx/: ack_data_tx.c
Drivers/API/Src/examples/ex_07b_ack_data_rx/: ack_data_rx.c
Drivers/API/Src/examples/ex_11a_spi_crc/: spi_crc.c
Drivers/API/Src/examples/ex_13a_gpio/: gpio_example.c
Drivers/API/Src/examples/ex_14_otp_write/: otp_write.c
Drivers/API/Src/examples/ex_15_le_pend/: le_pend_rx.c  le_pend_tx.c
Drivers/API/Src/examples/ex_16_pll_cal/: pll_cal.c
Drivers/API/Src/examples/ex_17_bw_cal/: bandwidth_calibration.c
Drivers/API/Src/examples/ex_18_timer/: timer_example.c
Drivers/API/Src/examples/ex_19_tx_power_adjustment/: tx_power_adjustment_example.c
Drivers/API/Src/examples/ex_20_simple_aes/: simple_aes.c
Drivers/API/Src/examples/ex_21_linear_tx_power/: linear_tx_power_example.c
Drivers/API/Src/examples/ex_22a_frame_filtering_tx/: frame_filtering_tx.c
Drivers/API/Src/examples/ex_22b_frame_filtering_rx/: frame_filtering_rxs.c
Drivers/API/Src/examples/examples_info/: example_info.c
Drivers/API/Src/examples/marco_polo/: TX_and_RX_cir.c  simple_initiator.c  simple_responder.c
Drivers/API/Src/examples/my_test/: my_test.c
Drivers/API/Src/examples/my_test_2/: my_test_2.c
Drivers/API/Src/examples/my_test_3/: TX_and_read_cir.c
Drivers/API/Src/examples/shared_data/: shared_functions.c
Drivers/API/Src/tests/automated_tests/: CMakeLists.txt  aes_sts_check.c  test_common.c  test_common.h  tx_rx_aes_verification.c  tx_sleep_test.c  unit_test.c
Drivers/cmake/: arm-none-eabi-gcc.cmake  config.cmake  util.cmake
Drivers/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Drivers/docs/html/_sources/: index.rst.txt
Drivers/docs/html/_sources/drivers/: index.rst.txt
Drivers/docs/html/_static/: documentation_options.js
Drivers/docs/html/drivers/: index.html
Drivers/docs/html/drivers/uwb/: index.html  uwb_driver_api.html  uwb_driver_overview.html  uwb_private.html  uwb_radio_api.html  uwb_version.html
(+39 files in other folders)
